<resources>
    <string name="app_name">MoneyMind</string>
    <string name="ingresar">Ingresar</string>
    <string name="no_tienes_cuenta">¿No tienes cuenta?</string>
    <string name="registrate">Registrate</string>
    <string name="registrate_title">¡Registrate!</string>
    <string name="primer_nombre">Primer nombre</string>
    <string name="primer_apellido">Primer apellido</string>
    <string name="correo">Correo</string>
    <string name="contrase_a">Contraseña</string>
    <string name="confirmar_contrase_a">Confirmar contraseña</string>
    <string name="registrar">Registrar</string>
    <string name="ya_tienes_cuenta">¿Ya tienes cuenta?</string>
    <string name="inicia_sesi_n">Inicia sesión</string>
    <string name="primera_vez">¿Primera vez?</string>
    <string name="vamos_a_conocernos">¡Conozcámonos más!</string>
    <string name="qu_temas_te_interesan">¿Qué temas te interesan?</string>
    <string name="ahorro_y_presupuestos">Ahorro y presupuestos</string>
    <string name="inversiones">Inversiones</string>
    <string name="deudas_y_cr_ditos">Deudas y créditos</string>
    <string name="emprendimiento">Emprendimiento</string>
    <string name="productos_financieros">Productos financieros</string>
    <string name="continuar">Continuar</string>
    <string name="bienvenido_a_moneymind">¡Bienvenido a MoneyMind!</string>
    <string name="qu_tanto_crees_que_conoces_actualmente_sobre_las_finanzas">¿Qué tanto crees que conoces actualmente sobre las finanzas?</string>
    <string name="escogiendo_m_dulos_para_ti">Escogiendo módulos para ti...</string>
    <string name="bienvenido_a_moneymind_tu_espacio_para_aprender_a_manejar_mejor_tu_dinero">¡Bienvenido a MoneyMind, tu espacio para aprender a manejar mejor tu dinero!</string>
    <string name="youtube_api_key">AIzaSyCOXsWeemv2-SegZeKnEBPVhi3Qz9SdAyo</string>
</resources>